# sap-scripting

./: .gitattributes  .gitignore  CONFIG.md  Cargo.toml  README.md  config.toml.example  migrate_config.rs  readme  sync_public.bat  tcodes.txt
docs/: control_id_vba.md  deliv_packages.md  delivery_ops.md  misc_vba.md  run_multi_vba.md  tcode_examples_vba.md  zmdesnr_layout.md
src/: app.rs  func.rs  lib.rs  list.rs  main.rs  sap_fn.rs  sap_login.rs  test_func.rs  utils.rs  vl06o.rs  vl06o_delivery_module.rs  vl06o_module.rs  vt11.rs  vt11_module.rs  zmdesnr.rs  zmdesnr_module.rs
src/lib/: lib.rs  types.rs  utils.rs
src/utils/: choose_layout_utils.rs  config_handlers.rs  config_ops.rs  config_types.rs  excel_file_ops.rs  excel_fileread_utils.rs  excel_path_utils.rs  loop_config.rs  mod.rs  sap_constants.rs  sap_crypto_utils.rs  sap_ctrl_utils.rs  sap_file_utils.rs  sap_interfaces.rs  sap_mock_impl.rs  sap_real_impl.rs  sap_tcode_utils.rs  sap_utils.rs  sap_wnd_utils.rs  select_layout_utils.rs  sequence_config.rs  setup_layout_li_utils.rs  setup_layout_utils.rs  utils.rs
tests/: auto_run_mock_tests.rs  auto_run_tests.rs  config_auto_run_tests.rs  config_integration_tests.rs  config_tests.rs  sap_ctrl_utils_tests.rs  utils_tests.rs
tests/mocks/: mock_traits.rs  mock_utils.rs  mod.rs  sap_mocks.rs
