[package]
name = "sap_scripting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
rpassword = "7.3.1"
sap-scripting = "0.3.8"
strum = "0.26.2"
strum_macros = "0.26.2"
text_io = "0.1.12"
windows-core = "0.56.0"
