[package]
name = "sap_automation"
version = "0.1.0"
edition = "2021"
description = "SAP GUI Automation utilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Library target for testing
[lib]
name = "sap_automation"
path = "src/lib.rs"

# Binary target for the application
[[bin]]
name = "sap_automation"
path = "src/main.rs"

[dev-dependencies]
pretty_env_logger = "0.5.0"

[dependencies]
windows = { version = "0.52.0", features = [ "Win32_System_Com", "Win32_Foundation", "Win32_System_Ole", "Win32_System_Variant" ] }
tracing = "0.1.41"
chrono = "0.4.31"
aes-gcm = "0.10.3"
base64 = "0.21.7"
rand = "0.8.5"
com-shim = "0.4.3"
sap-scripting = { git = "https://github.com/lilopkins/sap-scripting-rs", version = "0.4.2" }
anyhow = "1.0.97"
dialoguer = "0.11.0"
crossterm = "0.29.0"
calamine = "0.23.0"  # Using an older version that's compatible with zip 2.x
